crash when reporting corrupted classfile

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b72
    • generic
    • generic

        HashtableTextDump::corrupted is called to report a corrupted class file. It builds an error message in a local stack allocated buffer, using sprintf. The generated error message used to be small enough that it always fit in the allocated buffer. However, the error message was recently changed to include more information, and now it may sometimes be long enough to overrun that buffer.

              Assignee:
              Kim Barrett
              Reporter:
              Kim Barrett
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: