8129446: crash when reporting corrupted classfile

Increase buffer size and use jio_snprintf for message generation

Reviewed-by: tbenson, coleenp, iklam